(#3814) Factbook High Chart Mobile Breakpoint Issues
Closes #3814

* Added styling for context menu button to reduce overlap on title
* Added `labelFormatter` to resolve legend wrapping issue for K Awards chart in responsive mode
* Added styling for data-labels, series-group, and legend to reduce extra space on small screen sizes
* Updated styling to add missed specificity for data-labels, series-group, and legend

--- a/docroot/profiles/custom/cgov_site/themes/custom/cgov/cgov_common/src/libraries/charts/chart.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/cgov/cgov_common/src/libraries/charts/chart.scss
@@ -25,3 +25,33 @@
     font-weight: normal !important
   }
 }
+
+@media only screen and (max-width: 415px) {
+  #NCI-Chart__kawards-pie {
+    .highcharts-root {
+      .highcharts-data-labels,
+      .highcharts-series-group {
+        transform: matrix(1, 0, 0, 1, 10, 85);
+      }
+
+      .highcharts-series {
+        transform: none;
+      }
+
+      .highcharts-legend {
+        transform: translate(5px, 420px);
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 370px) {
+  #NCI-Chart__kawards-pie {
+    .highcharts-root {
+      .highcharts-data-labels,
+      .highcharts-series-group {
+        transform: matrix(1, 0, 0, 1, 10, 125);
+      }
+    }
+  }
+}
